联系人信息展示页重构，应用界面更新。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
         android:roundIcon="@drawable/logo_message"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityOfContactsInfo"></activity>
+        <activity
+            android:name=".ActivityOfContactsInfo"
+            android:theme="@style/MyActivityTheme">
+        </activity>
     </application>
 
 </manifest>
