--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.WRITE_CALL_LOG"/>
     <uses-permission android:name="android.permission.READ_CALL_LOG"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.READ_SMS"/>
     <application
@@ -16,16 +17,21 @@
         android:roundIcon="@drawable/logo_message"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".Activity.ActivityOfPermission">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".ActivityOfContactsInfo"
+            android:name=".Activity.MainActivity">
+        </activity>
+        <activity
+            android:name=".Activity.ActivityOfContactsInfo"
             android:theme="@style/MyActivityTheme">
+        </activity>
+        <activity
+            android:name=".Activity.ActivityOfMessageInfo">
         </activity>
     </application>
 
