添加了接收短信的功能，完善了发送短信的代码。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,14 @@
         <activity
             android:name=".Activity.ActivityOfMessageInfo">
         </activity>
+        <activity
+            android:name=".Activity.ActivityOfAddContact">
+        </activity>
+        <receiver android:name=".MessageReceiver">
+            <intent-filter android:priority="100">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
