--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
-
     testCompile 'junit:junit:4.12'
+    compile 'org.litepal.android:core:1.4.1'
 }
