--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,31 +13,34 @@
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
-        android:icon="@drawable/logo_message"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo_message"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.ActivityOfPermission">
+        <activity android:name=".Activity.Permission">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.MainActivity">
+            android:name=".Activity.MessageAndCall">
         </activity>
         <activity
-            android:name=".Activity.ActivityOfContactsInfo"
+            android:name=".Activity.ContactsList">
+        </activity>
+        <activity
+            android:name=".Activity.ContactsInfo"
             android:theme="@style/MyActivityTheme">
         </activity>
         <activity
-            android:name=".Activity.ActivityOfMessageInfo">
+            android:name=".Activity.MessageInfo">
         </activity>
         <activity
-            android:name=".Activity.ActivityOfAddContact">
+            android:name=".Activity.AddContact">
         </activity>
-        <receiver android:name=".MessageReceiver">
+        <receiver android:name=".Receiver.MessageReceiver">
             <intent-filter android:priority="100">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
