添加显示所有短信记录与通话记录的功能。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:theme="@style/MyActivityTheme">
         </activity>
         <activity
-            android:name=".Activity.MessageInfo">
+            android:name=".Activity.MessagePage">
         </activity>
         <activity
             android:name=".Activity.AddContact">
