--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".Activity.ContactsList">
         </activity>
         <activity
-            android:name=".Activity.ContactInfo"
+            android:name=".Activity.ContactsPage"
             android:theme="@style/MyActivityTheme">
         </activity>
         <activity
