添加拨号界面。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".Activity.MessageAndCall">
         </activity>
         <activity
+            android:name=".Activity.DialPage">
+        </activity>
+        <activity
             android:name=".Activity.ContactsList">
         </activity>
         <activity
