添加群发短信的界面。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity
             android:name=".Activity.DialPage">
         </activity>
+        <activity android:name=".Activity.SendMessagePage" />
         <activity
             android:name=".Activity.ContactsList">
         </activity>
